# vulkan_app

./: CMakeLists.txt
Modules/: CMakeLists.txt
Modules/Demo/: CMakeLists.txt
Modules/Demo/assets/: kx11-v2_dengzhao_albedo_png.ktx2
Modules/Demo/assets/kx11-v2/: KX11.gltf  KX11.mtl  dengzhao_albedo.png.pvr  immenstadter_horn_2k_IrradianceMap.ktx2
Modules/Demo/include/rendering/: app.h  keyboard_movement_controller.h  lxh_application.h  lxh_buffer.h  lxh_camera.h  lxh_descriptors.h  lxh_device.h  lxh_frame_info.h  lxh_game_object.h  lxh_model.h  lxh_pipeline.h  lxh_renderer.h  lxh_swap_chain.h  lxh_texture.h  lxh_utils.h  point_light_system.h  render_system.h  singleton.h
Modules/Demo/include/resource/: core.h  mesh.h  model_loader.h
Modules/Demo/include/shader/: shder.h
Modules/Demo/shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
Modules/Demo/src/rendering/: app.cpp  keyboard_movement_controller.cpp  lxh_application.cpp  lxh_buffer.cpp  lxh_camera.cpp  lxh_descriptors.cpp  lxh_device.cpp  lxh_game_object.cpp  lxh_model.cpp  lxh_pipeline.cpp  lxh_renderer.cpp  lxh_swap_chain.cpp  lxh_texture.cpp  main.cpp  point_light_system.cpp  render_system.cpp
Modules/Demo/src/resource/: mesh.cpp  model_loader.cpp
